compiler/testData/diagnostics/tests/typealias/methodReference.fir.kt
class C {
    fun foo() {}
}

typealias CA = C

val cf = <!UNRESOLVED_REFERENCE!>CA::foo<!>
